--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
     android:id="@+id/MainDrawer"
     >
 
-   <fragment
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/google_map"
-       android:name="com.google.android.gms.maps.SupportMapFragment"
-       />
+    <fragment
+        android:id="@+id/google_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="130dp" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -64,11 +64,19 @@
         android:id="@+id/currentLocation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="150dp"
+        android:layout_marginStart="280dp"
         android:layout_marginTop="655dp"
-        android:layout_marginEnd="170dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button_click_effect" />
+
+    <FrameLayout
+        android:id="@+id/bottomLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="600dp">
+
+    </FrameLayout>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
