--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -13,20 +13,12 @@
         </shape>
 
     </item>
-    <item android:state_pressed="true" android:state_focused="true">
-        <shape>
-            <stroke android:width="3dp" android:color="@android:color/holo_green_light"></stroke>
-            <solid android:color="@color/colorPrimary"></solid>
-            <corners android:bottomLeftRadius="10dp"
-                android:bottomRightRadius="10dp"
-                android:topLeftRadius="10dp"
-                android:topRightRadius="10dp"
-                ></corners>
-            <solid android:color="@android:color/white"></solid>
-        </shape>
-
+    <item android:state_pressed="true"
+       android:drawable="@drawable/before_selected"
+        >
     </item>
-
+    <item android:state_focused="true"
+        android:drawable="@drawable/before_selected"></item>
 
 
 </selector>
