--- a/app/src/main/res/drawable/button_click_bottom.xml
+++ b/app/src/main/res/drawable/button_click_bottom.xml
@@ -17,8 +17,8 @@
         <corners android:bottomLeftRadius="20dp"
             android:bottomRightRadius="20dp"
             android:topLeftRadius="20dp"
-            android:topRightRadius="20dp"
-            ></corners>
+            android:topRightRadius="20dp">
+        </corners>
     </item>
     <item android:state_focused="true">
         <shape>
