Add_Sliding_Pannel

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,125 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/slidingPanel"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:id="@+id/MainDrawer"
-    >
+    android:layout_gravity="bottom"
+    android:gravity="bottom"
+    android:orientation="vertical"
+    app:umanoDragView="@id/backSlide"
+    app:umanoParallaxOffset="100dp"
+    app:umanoShadowHeight="4dp"
+    sothree:umanoPanelHeight="50dp"
+    app:umanoFadeColor="@android:color/transparent"
+    tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/showTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="550dp"
-        android:text="TextView"
-        android:textSize="20dp" />
-
-    <fragment
-        android:id="@+id/google_map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="0dp" />
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/MainDrawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <Button
-            android:id="@+id/findWay"
-            android:layout_width="101dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="21dp"
-            android:layout_marginTop="628dp"
-            android:background="@drawable/button_click_bottom"
-            android:text="경로시작"
-            app:layout_constraintStart_toEndOf="@+id/startButton2"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/endButton2"
-            android:layout_width="101dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="628dp"
-            android:background="@drawable/button_click_bottom"
-            android:text="목적지 설정"
-            android:textColor="#FFF0F8FF"
-            app:layout_constraintStart_toEndOf="@+id/findWay"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/startButton2"
-            android:layout_width="101dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="628dp"
-            android:background="@drawable/button_click_bottom"
-            android:text="출발지 설정"
-            android:textColor="#FFF0F8FF"
+        <fragment
+            android:id="@+id/google_map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/mainLayout"
+            android:layout_width="318dp"
+            android:layout_height="179dp"
+            tools:layout_editor_absoluteX="46dp"
+            tools:layout_editor_absoluteY="518dp">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+            <Button
+                android:id="@+id/currentLocation"
+                android:layout_width="64dp"
+                android:layout_height="50dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/button_click_effect"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="345dp"
+                android:layout_height="59dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/bg"
+                android:clickable="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                sothree:navigationIcon="@android:drawable/ic_menu_sort_by_size"></androidx.appcompat.widget.Toolbar>
+
+            <TextView
+                android:id="@+id/showText"
+                android:layout_width="253dp"
+                android:layout_height="19dp"
+                android:layout_alignBottom="@+id/toolbar"
+                android:layout_alignParentEnd="true"
+                android:gravity="center_vertical"
+                android:text="장소 및 위치 검색하기!"
+                android:textSize="15dp"
+                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+                app:layout_constraintEnd_toEndOf="@+id/toolbar"
+                app:layout_constraintHorizontal_bias="0.663"
+                app:layout_constraintStart_toStartOf="@+id/toolbar"
+                app:layout_constraintTop_toTopOf="@+id/toolbar"
+                app:layout_constraintVertical_bias="0.525" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/naviagtion"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            sothree:headerLayout="@layout/navi_header"
+            sothree:menu="@menu/navi_menu" />
+
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+    <LinearLayout
+        android:id="@+id/backSlide"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="630dp"
-        android:background="@drawable/bg"
         android:clickable="true"
-        app:navigationIcon="@android:drawable/ic_menu_sort_by_size">
-    </androidx.appcompat.widget.Toolbar>
+        android:focusable="false"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/showText"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/toolbar"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginBottom="645dp"
-        android:gravity="center_vertical"
-        android:text="장소 및 위치 검색하기!"
-        android:textSize="15dp" />
-
-    <com.google.android.material.navigation.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/naviagtion"
-        app:headerLayout="@layout/navi_header"
-        app:menu="@menu/navi_menu"
-        android:layout_gravity="start"
-        />
-
-    <Button
-        android:id="@+id/currentLocation"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="655dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/button_click_effect" />
-
-    <!--    <FrameLayout-->
-<!--        android:id="@+id/bottomLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="600dp">-->
-
-<!--    </FrameLayout>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/addressText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="5dp"
+                android:textSize="18dp"
+                android:text="Click here"
+                ></TextView>
+    </LinearLayout>
+        <include
+            layout="@layout/main_sliding_inner"
+            android:id="@+id/bottom_slide"
+            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            ></include>
 
 
-</androidx.drawerlayout.widget.DrawerLayout>
+    </LinearLayout>
+</com.sothree.slidinguppanel.SlidingUpPanelLayout>
